--- a/src/sass/blocks/what-awaits-you/what-awaits-you.scss
+++ b/src/sass/blocks/what-awaits-you/what-awaits-you.scss
@@ -3,6 +3,7 @@
   margin-right: auto;
   margin-left: auto;
   padding-top: 50px;
+  overflow: hidden;
 
   @include tablet-width-only {
     padding-bottom: 50px;
