--- a/src/sass/blocks/you-will-gain-skill/you-will-gain-skill.scss
+++ b/src/sass/blocks/you-will-gain-skill/you-will-gain-skill.scss
@@ -1,6 +1,7 @@
 .you-will-gain-skill {
   position: relative;
   padding-top: 180px;
+  overflow: hidden;
 
   @include tablet-width-only {
     padding-top: 100px;
