--- a/src/sass/blocks/you-will-know-what-to-do/you-will-know-what-to-do.scss
+++ b/src/sass/blocks/you-will-know-what-to-do/you-will-know-what-to-do.scss
@@ -3,6 +3,7 @@
   margin-right: auto;
   margin-left: auto;
   padding: 100px 15px 125px 15px;
+  overflow: hidden;
 
   @include tablet-width-only {
     max-width: 750px;
